9/24/13 Write as '50 N' instead of '50N', see #51
9/24/13 Fixed: present and weight text blurry, see #50
9/24/13 Made items go in front of the skateboard
9/24/13 Make sure not to blend outside of 0..1 or it could cause overshooting and oscillation for item motion
9/22/13 Use single file build an inline images & audio
9/7/13 For the motion screens, made the numeric readout look less like a button, gray border, square corners
# 1.0.0-rc14 9/7/13
9/7/13 added icicles using the same strategy as mountains and clouds
9/7/13 show the mountains and clouds in a single translated layer, to improve performance
axon#5, rework ObservableArray
Use 'pool' branch for Vector2 pooling, see scenery#110
Added clouds back
Converted MovingBackgroundNode to use cssTransform to improve performance